Change currency data type to BigDecimal