@@ -6,6 +6,7 @@ import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
+import java.math.BigDecimal;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -58,7 +59,7 @@ public class OwnerControllerMvcTest {
 		verify(ticketRepository).findByEndTimeGreaterThanEqualAndEndTimeLessThanEqual(any(Timestamp.class), 
 				any(Timestamp.class));
 		
-		Assert.assertEquals(9.0, new Double(response).doubleValue(), Math.pow(10, -2));
+		Assert.assertEquals(9.0, new BigDecimal(response).doubleValue(), Math.pow(10, -2));
 	}
 	
 	@Test
@@ -75,23 +76,23 @@ public class OwnerControllerMvcTest {
 		verify(ticketRepository).findByEndTimeGreaterThanEqualAndEndTimeLessThanEqual(any(Timestamp.class), 
 				any(Timestamp.class));
 		
-		Assert.assertEquals(0.0, new Double(response).doubleValue(), Math.pow(10, -2));
+		Assert.assertEquals(0.0, new BigDecimal(response).doubleValue(), Math.pow(10, -2));
 	}
 	
 	private Collection<Ticket> getTickets() {
 		Timestamp firstStartTime = new Timestamp(DateTime.now().withTimeAtStartOfDay().plusHours(10).getMillis());
 		Timestamp firstEndTime = new Timestamp(DateTime.now().withTimeAtStartOfDay().plusHours(13).getMillis());
 		Ticket firstTicket = new Ticket("WWW12345", firstStartTime, false);
-		firstTicket.setId(new Long(1));
+		firstTicket.setId(Long.valueOf(1));
 		firstTicket.setEndTime(firstEndTime);
-		firstTicket.setCharge(7.0);
+		firstTicket.setCharge(new BigDecimal(7.0));
 		
 		Timestamp secondStartTime = new Timestamp(DateTime.now().withTimeAtStartOfDay().plusHours(13).getMillis());
 		Timestamp secondEndTime = new Timestamp(DateTime.now().withTimeAtStartOfDay().plusHours(15).getMillis());
 		Ticket secondTicket = new Ticket("WWW54321", secondStartTime, true);
-		secondTicket.setId(new Long(2));
+		secondTicket.setId(Long.valueOf(2));
 		secondTicket.setEndTime(secondEndTime);
-		secondTicket.setCharge(2.0);
+		secondTicket.setCharge(new BigDecimal(2.0));
 		
 		return new ArrayList<>(Arrays.asList(firstTicket, secondTicket));
 	}
